--- a/style.css
+++ b/style.css
@@ -109,30 +109,41 @@ header .container .profile img{
 /* FIELD-4 START */
 .field4{
     position: absolute;
-    width: 1440px;
+    width: 100%;
     height: 652px;
     left: 0px;
     top: 1879px;
-
     background: #F5F7FB;
 }
 .container-field4{
     position: absolute;
-    width: 1290px;
+    width: 100%;
     height: 419px;
     left: 75px;
     top: 120px;
 }
 .text-field4 h4{
+    position: absolute;
+    width: 566px;
+    height: 96px;
+    left: 715px;
+    top: 120px;
+    display: flex;
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
     line-height: 48px;
     letter-spacing: -0.5px;
+    
     color: #000000;
 }
-
 .text-field4 p{
+    position: absolute;
+    width: 650px;
+    height: 216px;
+    left: 715px;
+    top: 234px;
+    display: flex;
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
@@ -140,8 +151,27 @@ header .container .profile img{
     letter-spacing: -0.25px;
     color: #000000;
 }
-
-
+.btn{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 16px 24px;
+    position: absolute;
+    width: 197px;
+    height: 64px;
+    left: 720px;
+    top: 471px;
+    background: #4CCFC9;
+    border-radius: 8px;
+}
+.temukan{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 32px;
+    color: #FFFFFF;
+}
 /* FIELD-4 END */
 
 
