--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ header{
     position: fixed;
     top: 0px;
     background-color: #fff;
+    z-index: 100;
 }
 header .container{
     display: flex;
@@ -63,10 +64,8 @@ header .container .profile .profile-element{
     align-items: center;
 }
 header .container .profile img{
-    width: 30px;
-    height: 30px;
     padding: 0px 8px;
-    border-radius: 50%;
+    width: 50px;
 }
 .menu-icon{
     float: right;
