--- a/style.css
+++ b/style.css
@@ -166,72 +166,24 @@ header .container .profile img{
 /* FIELD-4 START */
 .field4{
     width: 100%;
-    height: 652px;
-    background: #F5F7FB;
+    height: auto;
+    display: flex;
+    margin: auto;
+    background-color: #F5F7FB;
 }
 .container-field4{
-    position: absolute;
-    width: 100%;
-    height: 419px;
-    left: 75px;
-    top: 120px;
-}
-.text-field4 h4{
-    position: absolute;
-    width: 566px;
-    height: 96px;
-    left: 715px;
-    top: 120px;
-    display: flex;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 48px;
-    letter-spacing: -0.5px;
     
-    color: #000000;
+    position:relative;
+    margin: 120px 75px;
 }
-.text-field4 p{
+.img-field4{
+    float:left;
     position: absolute;
-    width: 650px;
-    height: 216px;
-    left: 715px;
-    top: 234px;
-    display: flex;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 36px;
-    letter-spacing: -0.25px;
-    color: #000000;
+    width: 600px;
+    height: 411.57px;
 }
-.btn{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 16px 24px;
-    position: absolute;
-    width: 197px;
-    height: 64px;
-    left: 720px;
-    top: 471px;
-    background: #4CCFC9;
-    border-radius: 8px;
-}
-.temukan{
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 32px;
-    color: #FFFFFF;
-    transition: all 0.3s ease-in;
-    box-shadow: 0 9px #999;
-}
-.temukan:hover {
-    transform: translateY(10px);
-    box-shadow: none;
-    cursor: pointer;
+.txt-field4{
+    float:right;
 }
 /* FIELD-4 END */
 
