--- a/style.css
+++ b/style.css
@@ -172,7 +172,6 @@ header .container .profile img{
     background-color: #F5F7FB;
 }
 .container-field4{
-    
     position:relative;
     margin: 120px 75px;
 }
@@ -184,14 +183,51 @@ header .container .profile img{
     border-radius: 15px;
 }
 .txt-field4{
-    float:right;
     text-align: right;
+    
+}
+.txt-field4 h4{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 48px;
+    letter-spacing: -0.5px;
+    color: #000000;
+}
+.txt-field4 p{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 36px;
+    letter-spacing: -0.25px;
+    color: #000000;
+}
+.btn{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: right;
+    padding: 16px 24px;
+    position: absolute;
+    width: 197px;
+    height: 64px;
+    background: #4CCFC9;
+    border-radius: 8px;
+}
+.temukan{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 32px;
+    color: #FFFFFF;
+    cursor: pointer;
+    box-shadow: 0 4px #808080;
 }
 /* FIELD-4 END */
 
 /* FAQ */
 .faq{
-    margin-top: 100px;
+    /* margin-top: 100px; */
     padding: 50px 0;
     background-color: #4CCFC9;
     display: flex;
