--- a/style.css
+++ b/style.css
@@ -110,14 +110,110 @@ header .container .profile img{
 #hero {
     padding: 100px 50px;
 }
-#hero h1{
-    margin-bottom: 20px;
+#hero .container{
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
 }
-#hero p{
+#hero .hero-text h1{
     margin-bottom: 20px;
+    margin-left:auto;
+    margin-right:auto;
+}
+#hero .hero-text p{
+    margin-bottom: 30px;
 }
 .input-search{
     display: flex;
+    padding: 12px 18px;
+    border: 2px solid #eaeaea;
+    border-radius: 30px;
+}
+.input-search-icon{
+    margin-right: 16px;
+}
+.input-search input{
+    border: 0;
+    width: 100%;
+}
+.input-search input:active,
+.input-search input:focus{
+    border: 0;
+    outline: 0;
+}
+.hero-text{
+    text-align: center;
+}
+.hero-search{
+    text-align: center;
+}
+
+.mentor-summary{
+    display: flex;
+    overflow-x: auto;
+    padding: 10px;
+    -webkit-user-drag: auto;
+}
+.mentor-summary::-webkit-scrollbar{
+    height: 5px;
+}
+.mentor-summary::-webkit-scrollbar-track{
+    background-color: #eaeaea;
+    border-radius: 5px;
+}
+.mentor-summary::-webkit-scrollbar-thumb{
+    background-color: #d1d1d1;
+    border-radius: 5px;
+}
+.mentor-summary::-webkit-scrollbar-thumb:hover{
+    background-color: #bbbbbb;
+}
+.mentor-img img{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    object-fit: cover;
+    object-position: top;
+    width: 100%;
+    height: 175px;
+}
+.mentor-list{
+    margin-top: 70px;
+    display: flex;
+    align-items:center ;
+    justify-content: center;
+    flex-wrap: nowrap;
+}
+.mentor-card{
+    box-shadow: 0 0 5px 2px #00000010;
+    border-radius: 10px;
+    width: 250px;
+}
+.mentor-card:not(:last-of-type){
+    margin-right: 15px;
+}
+.mentor-desc{
+    padding: 16px;
+}
+.mentor-name{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 3px;
+}
+.mentor-job{
+    margin-bottom: 16px;
+}
+.btn-block{
+    width: 100%;
+    display: block;
+}
+.btn-primary{
+    padding: 10px;
+    border: 0;
+    outline: 0;
+    background-color: #4CCFC9;
+    color: white;
+    border-radius: 3px;
+    font-weight: 600;
 }
 /* END HERO */
 
@@ -176,6 +272,7 @@ header .container .profile img{
     font-weight: 400;
     font-size: 18px;
 }
+
 /* Field-3 End */
 
 /* FIELD-4 START */
