--- a/style.css
+++ b/style.css
@@ -117,20 +117,29 @@ header .container .profile img{
 }
 #hero .hero-text h1{
     margin-bottom: 20px;
+    max-width: 600px;
     margin-left:auto;
     margin-right:auto;
 }
 #hero .hero-text p{
     margin-bottom: 30px;
+    max-width: 600px;
+    margin-left:auto;
+    margin-right:auto;
 }
 .input-search{
     display: flex;
     padding: 12px 18px;
     border: 2px solid #eaeaea;
     border-radius: 30px;
+    transition: all .2s ease;
+}
+.input-search:focus-within{
+    border-color: #4CCFC9;
 }
 .input-search-icon{
     margin-right: 16px;
+    color: #5c5c5c;
 }
 .input-search input{
     border: 0;
@@ -214,6 +223,11 @@ header .container .profile img{
     color: white;
     border-radius: 3px;
     font-weight: 600;
+    cursor: pointer;
+    transition: all .5s ease;
+}
+.btn-primary:active{
+    box-shadow: inset 2px 2px 5px #00000030;
 }
 /* END HERO */
 
