--- a/style.css
+++ b/style.css
@@ -303,27 +303,23 @@ header .container .profile img{
     flex-direction: row;
 }
 .img-field4{
+    display: flex;
+    justify-content: center;
     float:left;
-    padding-right: 20px;
 }
 .gambar-tentor{
-    float:left;
-    padding-top: 10px;
-    width: 580px;
-    height: 390px;
+    padding-top: 25px;
+    padding-right: 20px;
+    width: 540px;
+    height: 350px;
     border-radius: 15px;
 }
 .text-field4{
     float: right;
-    width: 50%;
-    
 }
 .container .text-field4 h4{
-    
     font-style: normal;
-    font-weight: 700;
     font-size: 30px;
-    line-height: 48px;
     letter-spacing: -0.5px;
     color: #000;
 }
@@ -331,7 +327,7 @@ header .container .profile img{
     font-style: normal;
     font-weight: 400;
     font-size: 22px;
-    line-height: 36px;
+    line-height: 34px;
     letter-spacing: -0.25px;
     color: #000000;
 }
@@ -339,9 +335,8 @@ header .container .profile img{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: right;
     padding-top: 22px;
-    margin-top: 10px;
+    margin-top: 2px;
     position: absolute;
     width: 150px;
     height: 60px;
@@ -576,13 +571,27 @@ footer {
     /* Field-4 Start */
     .field4 .container{
         display: flex;
-
+        flex-direction: column;
     }
-    .img-field4{
-        display: flex;
+    .field4 .gambar-tentor{
+        width: 100%;
+        height: auto;
+        padding-left: 38px;
+        margin-bottom: 10px;
+        border-radius: 15px;
     }
-    .text-field4{
-        width: 90%;
+    .field4 .text-field4 h4{
+        /* width: 100%; */
+        text-align: center;
+        font-size: 30px;
+    }
+    .field4 .text-field4 p{
+        /* width: 100%; */
+        text-align: justify;
+        font-size: 27px;
+    }
+    .btn .temukan{
+        text-align: center;
     }
     /* Field-4 End */
 
@@ -641,17 +650,30 @@ footer {
     /* Field-3 End */
 
     /* Field-4 Start */
-    .field4 .container{
-        flex-direction: column;
+    .field4{
+        display: flex;
         width: 100%;
     }
-    .field4 .img-field4{
+    .field4 .gambar-tentor{
         width:100%;
-        
+        height: 200px;
     }
-    .field4 .text-field4 h4 p{
-        /* width: 90%; */
+    .field4 .text-field4 h4{
+        /* width: 100%; */
+        font-size: 20px;
         text-align: center;
+
+    }
+    .field4 .text-field4 p{
+        width: 100%;
+        text-align: justify;
+        line-height: 20px;
+        font-size: 15px;
+    }
+    .btn .temukan{
+        font-size: 13px;
+        position: relative;
+        padding-left: 40px;
     }
 
     /* Field-4 End */
