--- a/style.css
+++ b/style.css
@@ -407,7 +407,7 @@ header .container .profile img{
     background-color: white;
     border-radius: 4px;
     margin-bottom: 10px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 .faq .container .accordion-link{
     color: black;
